# ldbc_graphalytics_platforms_graphblas

./: .gitignore  Dockerfile  NOTICE.txt  README.md  final_pre.pptx  rai_build.yml
config-template/: cdlp.properties
config/: benchmark.properties  cdlp.properties
scripts/: init-for-testing.sh  init.sh  update-profile-src-c.sh  update-run-src-c.sh  update-src-c.sh
small-data-sets/: .gitignore  copy-dataset-to-container.sh  download-dataset-small.sh
src/main/c/: CMakeLists.txt  rai_build.yml  rai_build.yml.bak  run-code-rai.sh
src/main/c/benchmark-configs/: benchmark.properties  cdlp.properties
src/main/c/src/algorithms/: LAGraph_cdlp.c  cdlp.cpp  cdlp.cu  cdlp_cuda.cu  cdlp_cuda.cuh  cdlp_kernel.cu  cdlp_kernel.cuh
src/main/c/src/algorithms/common/: utils.hpp
src/main/java/science/atlarge/graphalytics/graphblas/: GraphblasPlatform.java
